# ai-agent

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  start.bat
agents/: AI_HANDOFF.md  STRATEGY_REFERENCE.md
agents/ceo/: README.md  main.py
agents/execution/: selector.py
config/: hard_limits.yaml  kis_api.yaml.example  logging.yaml  mode.yaml  sectors.json  strategy_params.yaml  universe.json  ~$is_api.yaml
core/backtest/: __init__.py  dashboard.py  replay_client.py  runner.py
core/consult/: __init__.py  parser.py
core/indicators/: __init__.py  bollinger.py  candle.py  macd.py  moving_average.py  rsi.py  volatility.py  volume.py
core/kis_client/: __init__.py  agent_api.py  auth.py  client.py  config.py  credit_ledger.py  exceptions.py  models.py  order.py  paper_broker.py  quote.py
core/learning/: __init__.py  review.py
core/marketdata/: __init__.py  candle_store.py  kiwoom.py  universe.py  yahoo.py
core/memory/: __init__.py  consult_log.py  improvement_log.py  meeting_decisions.py  session.py  store.py
core/messaging/: __init__.py
core/mode_lock/: __init__.py
core/notion_client/: __init__.py  classifier.py  client.py  (+2 more)
scripts/: _krx_sample_test.py  apply_proposal.py  auto_learn.py  build_universe.py  collect_candles.py  collect_candles_kiwoom.py  collect_krx.py  collect_market_context.py  consult_apply.py  healthcheck.py  kill_switch.py  meeting_apply.py  notion_apply.py  practice_candles.py  run_backtest.py  run_evolve.py  run_live.py  run_paper.py  save_meeting.py  sector_data.py  strategy_settings.py  switch_mode.py  sync_notion.py
(+568 files in other folders)
