[project]
name = "ai-agent"
version = "0.1.0"
description = "Multi-agent automated stock trading system for KRX via KIS Open API"
requires-python = ">=3.11"
dependencies = [
  "httpx>=0.27",
  "pydantic>=2.6",
  "pandas>=2.2",
  "numpy>=1.26",
  "pyarrow>=15.0",
  "redis>=5.0",
  "pyyaml>=6.0",
  "python-dateutil>=2.9",
  "matplotlib>=3.8",
  "plotly>=5.20",
  "psutil>=5.9",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
  "hypothesis>=6.99",
  "ruff>=0.4",
  "black>=24.3",
  "mypy>=1.9",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.mypy]
strict = true
files = ["core", "agents/risk"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
